--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
               <a href="https://app.goaxell.com" class="login-button">Login</a>
               <i class="fas fa-bars"></i>
             </div>
-            <div class="main_menu">
+            <div class="main_menu sub-menu">
               <ul>
-                <li class="has_dropdown"><a href="Google.com">Service</a></li>
                 <li class="mega_menu_dropdown has_dropdown">
                   <a href="#">Our Services <i class="fas fa-angle-down"></i></a>
                   <div class="mega_menu sub_menu">
@@ -69,8 +68,10 @@
                     </div>
                   </div>
                 </li>
+                <li class="has_dropdown"><a href="Google.com">About</a></li>
+
                 <li class="mega_menu_dropdown mega_menu_demo_2 has_dropdown">
-                  <a href="#">Shop 2 <i class="fas fa-angle-down"></i></a>
+                  <a href="#">Resource <i class="fas fa-angle-down"></i></a>
                   <div class="mega_menu sub_menu">
                     <div class="mega_menu_item">
                       <h3>HOME SERVICES</h3>
@@ -110,8 +111,7 @@
                     </div>
                   </div>
                 </li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#">Free E-Book</a></li>
               </ul>
             </div>
             <div class="login-register">
@@ -119,7 +119,7 @@
                 ><i class="fa-regular fa-user"></i> Login</a
               >
               <a href="https://goaxell.com/pricing" class="get-started-button"
-                >Get Started <i class="fa-regular fa-circle-right"></i
+                >Talk to our team <i class="fa-regular fa-circle-right"></i
               ></a>
             </div>
           </div>
