--- a/index.html
+++ b/index.html
@@ -72,43 +72,22 @@
 
                 <li class="mega_menu_dropdown mega_menu_demo_2 has_dropdown">
                   <a href="#">Resource <i class="fas fa-angle-down"></i></a>
-                  <div class="mega_menu sub_menu">
-                    <div class="mega_menu_item">
-                      <h3>HOME SERVICES</h3>
+                  <div class="mega_menu Resource sub_menu">
+                    <div class="mega_menu_item ">
+                      <h3>Blog</h3>
                       <a href="#"
-                        >Roofers <i class="fa-solid fa-angle-right"></i
+                        >On-Demand webinars <i class="fa-solid fa-angle-right"></i
                       ></a>
                       <a href="#"
-                        >HVAC <i class="fa-solid fa-angle-right"></i
+                        >Case Studies <i class="fa-solid fa-angle-right"></i
                       ></a>
                       <a href="#"
-                        >Plumbers <i class="fa-solid fa-angle-right"></i
+                        >eBook <i class="fa-solid fa-angle-right"></i
                       ></a>
                       <a href="#"
-                        >Landscapers <i class="fa-solid fa-angle-right"></i
+                        >View All resource <i class="fa-solid fa-angle-right"></i
                       ></a>
-                      <a href="#"
-                        >Home Improvement <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                    </div>
-                    <div class="mega_menu_item">
-                      <h3>HEALTH & WELLNESS</h3>
-                      <a href="#"
-                        >Medical Practice <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                      <a href="#"
-                        >Dental Practice <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                      <a href="#"
-                        >Chiropractic <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                      <a href="#"
-                        >Fitness Studio <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                      <a href="#"
-                        >Physical Therapy <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                    </div>
+                      
                   </div>
                 </li>
                 <li><a href="#">Free E-Book</a></li>
