chnage the logo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 href="https://app.goaxell.com/v2/preview/Xxg0wdYpOoFS68c4a2r9?notrack=true"
                 ><img
                   style="width: 200px"
-                  src="https://assets.cdn.filesafe.space/nJNK8F9txlp5KtGM33qr/media/661e48dbef70580f35b5e166.png"
+                  src="https://storage.googleapis.com/msgsndr/wKwZRzi5JiYNGFbN9WD3/media/6716aee8f65c1b7771f814bf.png"
               /></a>
             </div>
             <div class="mobile_btn">
