--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 ><i class="fa-regular fa-user"></i> Login</a
               >
               <a href="https://goaxell.com/pricing" class="get-started-button"
-                >Talk to our team <i class="fa-regular fa-circle-right"></i
+                ><span>Talk to our team</span> <i class="fa-regular fa-circle-right"></i
               ></a>
             </div>
           </div>
