--- a/index.html
+++ b/index.html
@@ -28,43 +28,77 @@
               <ul>
                 <li class="mega_menu_dropdown has_dropdown">
                   <a href="#">Our Services <i class="fas fa-angle-down"></i></a>
-                  <div class="mega_menu sub_menu">
-                    <div class="mega_menu_item">
-                      <h3>MARKETING CENTER</h3>
-                      <p class="mega_item_description">
-                        Manage your marketing and create campaigns with less
-                        effort.
-                      </p>
-                      <a href="#"
-                        >Advertising Campaigns
-                        <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                      <a href="#"
-                        >Enhanced Local Listings
-                        <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                      <a href="#"
-                        >Landing Pages <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                      <a href="#"
-                        >Al Recommendations
-                        <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                    </div>
-                    <div class="mega_menu_item">
-                      <h3>MARKETPLACE</h3>
-                      <p class="mega_item_description">
-                        Need a little something extra? Find it here.
-                      </p>
-                      <a href="#"
-                        >ThryvPay <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                      <a href="#"
-                        >Signatures <i class="fa-solid fa-angle-right"></i
-                      ></a>
-                      <a href="#"
-                        >Integrations <i class="fa-solid fa-angle-right"></i
-                      ></a>
+                  <div class="mega_menu sub_menu mega_with_button">
+                    <div class="mega_menu-inner">
+                      <div class="mega_menu_item">
+                        <div class="mega-option">
+                          <div class="icon">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="currentColor" fill-rule="evenodd" d="M2.25 6a3 3 0 0 1 3-3h13.5a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H5.25a3 3 0 0 1-3-3V6Zm18 3H3.75v9a1.5 1.5 0 0 0 1.5 1.5h13.5a1.5 1.5 0 0 0 1.5-1.5V9Zm-15-3.75A.75.75 0 0 0 4.5 6v.008c0 .414.336.75.75.75h.008a.75.75 0 0 0 .75-.75V6a.75.75 0 0 0-.75-.75H5.25Zm1.5.75a.75.75 0 0 1 .75-.75h.008a.75.75 0 0 1 .75.75v.008a.75.75 0 0 1-.75.75H7.5a.75.75 0 0 1-.75-.75V6Zm3-.75A.75.75 0 0 0 9 6v.008c0 .414.336.75.75.75h.008a.75.75 0 0 0 .75-.75V6a.75.75 0 0 0-.75-.75H9.75Z" clip-rule="evenodd"></path></svg></div>
+                          <div class="mega-option-content">
+                            <h4>Customer Website</h4>
+                            <p>Customizable design tool to make high-performing websites.</p>
+                          </div>
+                        </div>
+                        <div class="mega-option">
+                          <div class="icon"><svg width=" 100%" height=" 100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <g clip-path="url(#clip0_554_2625)"> <path d="M11.8733 22.632L6.73047 23.0777L7.17618 17.9349L17.8733 7.30631C18.033 7.14304 18.2236 7.0133 18.4341 6.92473C18.6446 6.83615 18.8707 6.79053 19.099 6.79053C19.3274 6.79053 19.5535 6.83615 19.7639 6.92473C19.9744 7.0133 20.1651 7.14304 20.3248 7.30631L22.5019 9.5006C22.6624 9.66008 22.7897 9.84972 22.8766 10.0586C22.9635 10.2675 23.0083 10.4915 23.0083 10.7177C23.0083 10.944 22.9635 11.168 22.8766 11.3769C22.7897 11.5858 22.6624 11.7754 22.5019 11.9349L11.8733 22.632Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M1.44347 6.80913C0.841759 6.70456 0.841759 5.84056 1.44347 5.73599C2.50887 5.55056 3.49492 5.05207 4.27591 4.30406C5.05689 3.55605 5.59743 2.59241 5.82862 1.53599L5.86462 1.36971C5.9949 0.776563 6.84176 0.77142 6.9789 1.36628L7.02176 1.55828C7.26142 2.60999 7.80647 3.56745 8.58848 4.31042C9.37049 5.05339 10.3546 5.54875 11.4172 5.73428C12.0223 5.83713 12.0223 6.70628 11.4172 6.81256C10.3545 6.99766 9.37019 7.49263 8.58788 8.23529C7.80556 8.97796 7.26012 9.93521 7.02004 10.9868L6.97547 11.1806C6.84004 11.7737 5.99319 11.7703 5.8629 11.1754L5.82862 11.0091C5.5972 9.95225 5.05615 8.98827 4.27451 8.24022C3.49286 7.49216 2.50607 6.99394 1.44004 6.80913H1.44347Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </g> <defs> <clipPath id="clip0_554_2625"> <rect width="24" height="24" fill="currentColor"></rect> </clipPath> </defs> </svg></div>
+                          <div class="mega-option-content">
+                            <h4>Website Content Generation</h4>
+                            <p>Expert SEO and copywriters to create unique, effective content.</p>
+                          </div>
+                        </div>
+                        <div class="mega-option">
+                          <div class="icon"><svg width=" 100%" height=" 100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <path d="M7.21721 10.9071C6.83295 10.2169 6.096 9.75 5.25 9.75C4.00736 9.75 3 10.7574 3 12C3 13.2426 4.00736 14.25 5.25 14.25C6.096 14.25 6.83295 13.7831 7.21721 13.0929M7.21721 10.9071C7.39737 11.2307 7.5 11.6034 7.5 12C7.5 12.3966 7.39737 12.7693 7.21721 13.0929M7.21721 10.9071L16.7828 5.5929M7.21721 13.0929L16.7828 18.4071M16.7828 18.4071C16.6026 18.7307 16.5 19.1034 16.5 19.5C16.5 20.7426 17.5074 21.75 18.75 21.75C19.9926 21.75 21 20.7426 21 19.5C21 18.2574 19.9926 17.25 18.75 17.25C17.904 17.25 17.1671 17.7169 16.7828 18.4071ZM16.7828 5.5929C17.1671 6.28309 17.904 6.75 18.75 6.75C19.9926 6.75 21 5.74264 21 4.5C21 3.25736 19.9926 2.25 18.75 2.25C17.5074 2.25 16.5 3.25736 16.5 4.5C16.5 4.89664 16.6026 5.26931 16.7828 5.5929Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </svg></div>
+                          <div class="mega-option-content">
+                            <h4>Social Media Management</h4>
+                            <p>Custom online posts to increase community engagement.</p>
+                          </div>
+                        </div>
+                        <div class="mega-option">
+                          <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 13.125C3 12.504 3.504 12 4.125 12h2.25c.621 0 1.125.504 1.125 1.125v6.75C7.5 20.496 6.996 21 6.375 21h-2.25A1.125 1.125 0 0 1 3 19.875v-6.75Zm6.75-4.5c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125v11.25c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V8.625Zm6.75-4.5c0-.621.504-1.125 1.125-1.125h2.25C20.496 3 21 3.504 21 4.125v15.75c0 .621-.504 1.125-1.125 1.125h-2.25a1.125 1.125 0 0 1-1.125-1.125V4.125Z"></path></svg></div>
+                          <div class="mega-option-content">
+                            <h4>Intelligent Analytics</h4>
+                            <p>Website analytics and marketing performance insight dashboard.</p>
+                          </div>
+                        </div>
+                        <div class="mega-option">
+                          <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 20 20"><path fill="currentColor" fill-rule="evenodd" d="M2 3.75A.75.75 0 0 1 2.75 3h14.5a.75.75 0 0 1 0 1.5H2.75A.75.75 0 0 1 2 3.75Zm0 4.167a.75.75 0 0 1 .75-.75h14.5a.75.75 0 0 1 0 1.5H2.75a.75.75 0 0 1-.75-.75Zm0 4.166a.75.75 0 0 1 .75-.75h14.5a.75.75 0 0 1 0 1.5H2.75a.75.75 0 0 1-.75-.75Zm0 4.167a.75.75 0 0 1 .75-.75h14.5a.75.75 0 0 1 0 1.5H2.75a.75.75 0 0 1-.75-.75Z" clip-rule="evenodd"></path></svg></div>
+                          <div class="mega-option-content">
+                            <h4>Listing Management</h4>
+                            <p>Optimize online listings and local healthcare directories.</p>
+                          </div>
+                        </div>
+                      </div>
+                      <!-- second col -->
+                      <div class="mega_menu_item">
+                        <div class="mega-option">
+                          <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M11.48 3.499a.562.562 0 0 1 1.04 0l2.125 5.111a.563.563 0 0 0 .475.345l5.518.442c.499.04.701.663.321.988l-4.204 3.602a.563.563 0 0 0-.182.557l1.285 5.385a.562.562 0 0 1-.84.61l-4.725-2.885a.563.563 0 0 0-.586 0L6.982 20.54a.562.562 0 0 1-.84-.61l1.285-5.386a.562.562 0 0 0-.182-.557l-4.204-3.602a.563.563 0 0 1 .321-.988l5.518-.442a.563.563 0 0 0 .475-.345L11.48 3.5Z"></path></svg></div>
+                          <div class="mega-option-content">
+                            <h4>Reputation management</h4>
+                            <p>Collect and manage patient feedback, reviews, and ratings.</p>
+                          </div>
+                        </div>
+                        <div class="mega-option">
+                          <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><g fill="currentColor"><path d="M12.75 12.75a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0Zm-5.25 3a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5Zm.75 1.5a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0Zm1.5-1.5a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5Zm.75 1.5a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0Zm1.5-1.5a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5Zm.75 1.5a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0Zm1.5-1.5a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5Zm.75 1.5a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0Zm1.5-1.5a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5Zm-1.5-3a.75.75 0 1 1-1.5 0a.75.75 0 0 1 1.5 0Zm1.5.75a.75.75 0 1 0 0-1.5a.75.75 0 0 0 0 1.5Z"></path><path fill-rule="evenodd" d="M6.75 2.25A.75.75 0 0 1 7.5 3v1.5h9V3A.75.75 0 0 1 18 3v1.5h.75a3 3 0 0 1 3 3v11.25a3 3 0 0 1-3 3H5.25a3 3 0 0 1-3-3V7.5a3 3 0 0 1 3-3H6V3a.75.75 0 0 1 .75-.75Zm13.5 9a1.5 1.5 0 0 0-1.5-1.5H5.25a1.5 1.5 0 0 0-1.5 1.5v7.5a1.5 1.5 0 0 0 1.5 1.5h13.5a1.5 1.5 0 0 0 1.5-1.5v-7.5Z" clip-rule="evenodd"></path></g></svg></div>
+                          <div class="mega-option-content">
+                            <h4>Online appointments</h4>
+                            <p>Integrated appointment booking request and online forms.</p>
+                          </div>
+                        </div>
+                        <div class="mega-option">
+                          <div class="icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--heroicons" width="100%" height="100%" preserveAspectRatio="xMidYMid meet" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M15.042 21.672L13.684 16.6m0 0l-2.51 2.225l.569-9.47l5.227 7.917l-3.286-.672Zm-7.518-.267A8.25 8.25 0 1 1 20.25 10.5M8.288 14.212A5.25 5.25 0 1 1 17.25 10.5"></path></svg></div>
+                          <div class="mega-option-content">
+                            <h4>Front desk automation</h4>
+                            <p>tools to manage appointments and patient engagement.</p>
+                          </div>
+                        </div>
+                        <div class="mega-option">
+                          <div class="icon"><svg width=" 100%" height=" 100%" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"> <g clip-path="url(#clip0_811_2)"> <path d="M7.71423 15.5312L20.8799 19.9197C21.1378 20.0047 21.4121 20.0274 21.6803 19.9855C21.9485 19.9439 22.203 19.839 22.4228 19.6797C22.6443 19.522 22.8251 19.3139 22.9505 19.0723C23.0756 18.831 23.1416 18.5632 23.1428 18.2911V4.18261C23.1416 3.91064 23.0756 3.64287 22.9505 3.40143C22.8251 3.15999 22.6443 2.95179 22.4228 2.79404C22.2015 2.6376 21.9464 2.53584 21.6781 2.49709C21.41 2.45837 21.1364 2.48376 20.8799 2.57118L7.71423 6.95976V15.5312Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M0.857117 11.2457C0.857117 11.8085 0.967969 12.3658 1.18335 12.8857C1.39872 13.4057 1.71441 13.8782 2.11237 14.2761C2.91609 15.0799 4.00619 15.5314 5.14283 15.5314H7.71426V6.95996H5.14283C4.58003 6.95996 4.02273 7.07081 3.50276 7.28619C2.9828 7.50157 2.51034 7.81726 2.11237 8.21521C1.30865 9.01894 0.857117 10.109 0.857117 11.2457Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> <path d="M5.14282 15.5312V17.2456C5.14282 17.8084 5.25367 18.3657 5.46905 18.8857C5.68443 19.4056 6.00012 19.8781 6.39807 20.2759C6.79604 20.674 7.2685 20.9896 7.78846 21.2051C8.30844 21.4204 8.86574 21.5313 9.42854 21.5313" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path> </g> <defs> <clipPath id="clip0_811_2"> <rect width="24" height="24" fill="currentColor"></rect> </clipPath> </defs> </svg></div>
+                          <div class="mega-option-content">
+                            <h4>Google ads management</h4>
+                            <p>Adwords and PPC campaign management and optimization.</p>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                 </li>
