--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="nav-container">
       <nav>
-        <div class="container">
+        <div class="mega-container">
           <div class="row">
             <div class="logo">
               <a
